--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".CompteBienCreeActivity"
             android:exported="true">
 
             <intent-filter>
@@ -26,13 +26,10 @@
 
         </activity>
 
-        <activity
-            android:name=".Bienvenue"
-            android:exported="false" />
-
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".Bienvenue" />
         <activity android:name=".CreationCompteActivity" />
         <activity android:name=".CreationCompte2Activity" />
-        <activity android:name=".CompteBienCreeActivity" />
         <activity android:name=".ValidationChoixPreferenceActivity" />
         <activity android:name=".SeConnecter" />
         <activity android:name=".AccueilActivity" />
@@ -41,7 +38,4 @@
         <activity android:name=".RechercheActivity" />
 
     </application>
-
-
-
 </manifest>
