--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
-            android:name=".CompteBienCreeActivity"
+            android:name=".SeConnecter"
             android:exported="true">
 
             <intent-filter>
@@ -30,8 +30,9 @@
         <activity android:name=".Bienvenue" />
         <activity android:name=".CreationCompteActivity" />
         <activity android:name=".CreationCompte2Activity" />
+        <activity android:name=".CompteBienCreeActivity" />
         <activity android:name=".ValidationChoixPreferenceActivity" />
-        <activity android:name=".SeConnecter" />
+        <!-- <activity android:name=".SeConnecter" /> -->
         <activity android:name=".AccueilActivity" />
         <activity android:name=".CategorieActivity" />
         <activity android:name=".AchatActivity" />
