--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".AccueilActivity"
             android:exported="true">
 
             <intent-filter>
@@ -32,7 +32,7 @@
         <activity android:name=".CompteBienCreeActivity" />
         <activity android:name=".ValidationChoixPreferenceActivity" />
         <activity android:name=".SeConnecter" />
-        <activity android:name=".AccueilActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".CategorieActivity" />
         <activity android:name=".AchatActivity" />
         <activity android:name=".RechercheActivity" />
